[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menus/levelButton.gd" type="Script" id=1]
[ext_resource path="res://Menus/themebotones.tres" type="Theme" id=2]
[ext_resource path="res://Menus/fondoBotones.tres" type="StyleBox" id=3]
[ext_resource path="res://Menus/fondoBotonesHover.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/star.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.466667, 0.0352941, 0.670588 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5

[node name="levelButton" type="Button"]
theme = ExtResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
text = "lvl 0"
script = ExtResource( 1 )

[node name="star1" type="Sprite" parent="."]
modulate = Color( 0.258824, 0.258824, 0.258824, 1 )
position = Vector2( 25, 80 )
scale = Vector2( 0.0759091, 0.0730337 )
texture = ExtResource( 5 )

[node name="star2" type="Sprite" parent="."]
modulate = Color( 0.258824, 0.258824, 0.258824, 1 )
position = Vector2( 65, 80 )
scale = Vector2( 0.0759091, 0.0730337 )
texture = ExtResource( 5 )

[node name="star3" type="Sprite" parent="."]
modulate = Color( 0.258824, 0.258824, 0.258824, 1 )
position = Vector2( 105, 80 )
scale = Vector2( 0.0759091, 0.0730337 )
texture = ExtResource( 5 )

[connection signal="pressed" from="." to="." method="_on_levelButton_pressed"]
